# VersaTerm

./: .gitmodules  README.md
software/: CMakeLists.txt  ReadMe.md  VersaTerm.uf2  VersaTerm_rp2040.uf2  VersaTerm_rp2350.uf2
software/src/: config.c  config.h  font.h  framebuf.c  framebuf_dvi.c  keyboard_usb.c  keyboard_usb.h  main.c  sound.c
